add detail news, news page, improve seo, improve routing, nearly finish

--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Afk Journey</title>
+    <meta
+      name="description"
+      content="AFK Journey - An engaging and dynamic game with unique characters and exciting adventures."
+    />
+    <meta
+      name="keywords"
+      content="AFK Journey, game, adventure, characters, dynamic, engaging"
+    />
+    <meta property="og:title" content="AFK Journey" />
+    <meta
+      property="og:description"
+      content="AFK Journey - An engaging and dynamic game with unique characters and exciting adventures."
+    />
+    <meta property="og:image" content="/img/og-image.jpg" />
+    <meta property="og:url" content="https://afk-journey-website.vercel.app/" />
+    <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
     <div id="root"></div>
